moved common kaltura player loaded code into kaltura-bootstrap.js
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2197 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/BasicPlayer.html
+++ b/modules/KalturaSupport/tests/BasicPlayer.html
@@ -1,68 +1,46 @@
 <html>
 <head>
-<title>Fall forward Iframe</title>
+<title>Basic Player test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+<!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php -->
+<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 
 <script type="text/javascript">	
-if( window.QUnit ){
-	QUnit.start();	
+function jsKalturaPlayerTest( videoId ){
+	// Name this module
 	module( "IframeFallForward" );
+
+	var $iframe = $('#' + videoId + '_ifp').contents();
+	var iframeContext = window.frames['kaltura_player_ifp'];
 	
-	var jsCallbackCalled = false;
-	function jsCallbackReady ( videoId ) {
-		jsCallbackCalled = true;
+	test( "Iframe in DOM", function() {
+		ok( $('#' + videoId + '_ifp').length , 'iframe found' );
+		equal( typeof iframeContext, 'object', "iframe JavaScript context available" );
+	});
 
-		var $iframe = $('#' + videoId + '_ifp').contents();
-		var iframeContext = window.frames['kaltura_player_ifp'];
-		
-		test( "Iframe in DOM", function() {
-			ok( $('#' + videoId + '_ifp').length , 'iframe found' );
-			equal( typeof iframeContext, 'object', "iframe JavaScript context available" );
-		});
-
-		asyncTest("Iframe layout elements", function(){
-			// Add an mw.ready here to make sure the interface is ready before we check for interface components
-			mw.ready(function(){
-				ok( $iframe.find('.play-btn-large').length, ".play-btn-large found" );
-				ok( $iframe.find('.play-btn').length, ".play-btn found" );
-				start();
-			});
-		});
-		
-		asyncTest("Iframe config", function(){
-			equal( iframeContext.mw.getConfig('Kaltura.IframeRewrite' ), false, "Kaltura.IframeRewrite" ); 
-			equal( iframeContext.mw.getConfig('Mw.LogPrepend'), 'iframe:', "Mw.LogPrepend ");
-			// Test page context config: 
-			equal( iframeContext.mw.getConfig('EmbedPlayer.EnableIpadHTMLControls'), true, 'EmbedPlayer.EnableIpadHTMLControls' );
+	asyncTest("Iframe layout elements", function(){
+		// Add an mw.ready here to make sure the interface is ready before we check for interface components
+		mw.ready(function(){
+			ok( $iframe.find('.play-btn-large').length, ".play-btn-large found" );
+			ok( $iframe.find('.play-btn').length, ".play-btn found" );
 			start();
 		});
-
-	}
-	
-	// We may make this part of the framework.. but kind of tricky given diffrent loading types
-	// this really only applies to all kaltura tests... maybe we include it as qunit-kalturasupport.js
-	asyncTest( "loading player", function(){
-		var waitCount = 0;
-		var interval = setInterval(function(){
-			// timeout in 20 seconds:
-			if( waitCount == 200 && !jsCallbackCalled ){
-				ok(false, "Player timed out");
-				clearInterval( interval );
-			}
-			if( jsCallbackCalled ){
-				ok(true, "Player loaded");
-				clearInterval( interval );
-				start();
-			}
-			waitCount++;
-		}, 100);
 	});
+	
+	asyncTest("Iframe config", function(){
+		equal( iframeContext.mw.getConfig('Kaltura.IframeRewrite' ), false, "Kaltura.IframeRewrite" ); 
+		equal( iframeContext.mw.getConfig('Mw.LogPrepend'), 'iframe:', "Mw.LogPrepend ");
+		// Test page context config: 
+		equal( iframeContext.mw.getConfig('EmbedPlayer.EnableIpadHTMLControls'), true, 'EmbedPlayer.EnableIpadHTMLControls' );
+		start();
+	});
+
 }
 </script>
 </head>
 <body>
-<h2> Fall forward iFrame </h2>
+<h2> Basic Player test </h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
