--- a/modules/KalturaSupport/tests/BasicPlayer.html
+++ b/modules/KalturaSupport/tests/BasicPlayer.html
@@ -21,6 +21,7 @@ function jsKalturaPlayerTest( videoId ){
 
 	asyncTest("Iframe layout elements", function(){
 		// Add an mw.ready here to make sure the interface is ready before we check for interface components
+		// alternativly we could bind against the kdp media ready event
 		mw.ready(function(){
 			ok( $iframe.find('.play-btn-large').length, ".play-btn-large found" );
 			ok( $iframe.find('.play-btn').length, ".play-btn found" );
