--- a/modules/KalturaSupport/tests/PrototypeJsAndJQuery.qunit.html
+++ b/modules/KalturaSupport/tests/PrototypeJsAndJQuery.qunit.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Basic Player test</title>
+<title>Prototype js and jQuery integration test</title>
 <!--  Include jQuery 1.6.16 -->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 <!--  jQuery no conflict ( so we can include prototype ) -->
@@ -52,7 +52,7 @@ function jsKalturaPlayerTest( videoId ){
 </script>
 </head>
 <body>
-<h2> Basic Player test </h2>
+<h2> Prototype js and jQuery integration test</h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" 
