--- a/modules/KalturaSupport/tests/PrototypeJsAndJQuery.qunit.html
+++ b/modules/KalturaSupport/tests/PrototypeJsAndJQuery.qunit.html
@@ -35,7 +35,7 @@ function jsKalturaPlayerTest( videoId ){
 	asyncTest("Valid Player layout", function(){
 		// Add an mw.ready here to make sure the interface is ready before we check for interface components
 		// alternativly we could bind against the kdp media ready event
-		mw.ready(function(){
+		kalturaQunitWaitForPlayer(function(){
 			ok( $iframe.find('.play-btn-large').length, ".play-btn-large found" );
 			ok( $iframe.find('.play-btn').length, ".play-btn found" );
 			start();
