--- a/modules/KalturaSupport/tests/PrototypeJsAndJQuery.qunit.html
+++ b/modules/KalturaSupport/tests/PrototypeJsAndJQuery.qunit.html
@@ -42,8 +42,8 @@ function jsKalturaPlayerTest( videoId ){
 
 	// test the iframe api with prototype selector
 	test("KDP api valid with prototype and jQuery", function(){
-		equal( $( 'kaltura_player' ).evaluate('{mediaProxy.entry.id}'), '0_uka1msg4', "prototype selector");
-		equal( jQuery( '#kaltura_player' ).get(0).evaluate('{mediaProxy.entry.id}'), '0_uka1msg4', 'jQuery selector');
+		equal( $( 'kaltura_player' ).evaluate('{mediaProxy.entry.id}'), '0_uka1msg4', "prototype .evaluate() call");
+		equal( jQuery( '#kaltura_player' ).get(0).evaluate('{mediaProxy.entry.id}'), '0_uka1msg4', 'jQuery evaluate() call');
 	});
 
 }
