--- a/modules/KalturaSupport/tests/KdpApiGoogleAnalytics.qunit.html
+++ b/modules/KalturaSupport/tests/KdpApiGoogleAnalytics.qunit.html
@@ -3,12 +3,10 @@
 <head>
 <title>Google analytics example html5 / kdp</title>
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
+<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
+
 <script src="http://cdn.kaltura.org/apis/seo/flashembed.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
-<script type="text/javascript">
-	mw.setConfig( 'EmbedPlayer.EnableIframeApi', true );
-</script>
 <script type="text/javascript" src="resources/kGoogleAnalytics.js"></script>
 <script type="text/javascript">
 
@@ -77,9 +75,13 @@
 </head>
 <body>
 <h2> Google analytics for kdp flash player and html5 player </h2>
+<div>
 <a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
 <br />
-<div style="position:absolute;top:90px;left:450px;width:500px;height:300px;" >
+
+<div id="player_container" style="float:left;" ></div>
+
+<div style="float:left;padding-left:30px;">
 <i>Google Analytics events: </i><br />
 <table border="1" width="500">
 <tr id="eventRowDesc">
@@ -91,7 +93,6 @@
 </table>
 </div>
 
-<div id="player_container" style="width:330px;height400px" ></div>
-
+</div>
 </body>
 </html>
