--- a/modules/KalturaSupport/tests/KdpApiGoogleAnalytics.qunit.html
+++ b/modules/KalturaSupport/tests/KdpApiGoogleAnalytics.qunit.html
@@ -39,6 +39,7 @@
 			
 			// An optional event callback to be used to monitor what events are being sent to google via _trackEvent calls
 			'trackEventMonitor' : function( category, action, opt_label, opt_value ){
+				trackEventForTests( category, action, opt_label, opt_value ); 
 				$('#eventRowDesc').after(
 					$('<tr />' ).append(
 						$('<td />').text( category ),
@@ -71,6 +72,52 @@
 					// "false" must be double-quoted, all other values don't have to be
 				}
 		);
+</script>
+<!--  qUnit TESTING -->
+<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
+<script type="text/javascript">
+var testEventObject = {};
+// we use this round about way of tracking events to show the events are being sent for google.
+function trackEventForTests(category, action, opt_label, opt_value ) {
+	// delay trigger to ensure we have setup the binding
+	setTimeout(function(){
+		$j( testEventObject ).trigger( action, {'category': category, 'action' : action, 'opt_label':opt_label, 'opt_value' : opt_value } );
+	},100);
+}
+function jsKalturaPlayerTest( videoId ){
+	// Name this module
+	module( "KdpApi Google Analytics" );
+	var kdp = $j( '#kaltura_player' ).get(0);
+	var $iframe = $('#' + videoId + '_ifp').contents();
+	var iframeContext = window.frames['kaltura_player_ifp'];
+
+	asyncTest("mediaReady event sent", function(){
+		$j( testEventObject ).bind('mediaReady', function(event, testEvent ){
+			equal( testEvent.action, "mediaReady", "action mediaReady sent" );
+			equal( testEvent.opt_label, "0_swup5zao", "opt_label entry id set to entry id" );
+			start();
+		});
+	});	
+	asyncTest("play, pause and seek events", function(){
+		$j( testEventObject ).bind('doPlay', function(event, testEvent){
+			equal( testEvent.action, "doPlay", "action doPlay event sent" );
+		});
+		$j( testEventObject ).bind('doPause', function(event, testEvent){
+			equal( testEvent.action, "doPause", "action doPause event sent" );
+		});
+		$j( testEventObject ).bind('doSeek', function(event, testEvent){
+			equal( testEvent.action, "doSeek", "action doSeek event sent" );
+			equal( testEvent.opt_value, "10", "opt_value doSeek set to seek time" );
+			start();
+		});
+		kdp.sendNotification('doPlay');
+		setTimeout(function(){
+			kdp.sendNotification( 'doPause' );
+			kdp.sendNotification( 'doSeek', 10 );
+		},1000 );
+	});
+
+}
 </script>
 </head>
 <body>
