--- a/modules/KalturaSupport/tests/PrototypeJsAndJQuery.qunit.html
+++ b/modules/KalturaSupport/tests/PrototypeJsAndJQuery.qunit.html
@@ -26,9 +26,10 @@ function jsKalturaPlayerTest( videoId ){
 	var $iframe = jQuery('#' + videoId + '_ifp').contents();
 	var iframeContext = window.frames['kaltura_player_ifp'];
 	
-	test( "Prototype library present ", function() {
+	asyncTest( "Prototype library present ", function() {
 		ok( Prototype.Version , '1.7', "Valid prototype version"  );
 		equal( $( 'kaltura_player_ifp' ).nodeName.toLowerCase(), 'iframe', "Valid prototype iframe selector" );
+		start();
 	});
 
 	// make sure player in the dom: 
@@ -41,9 +42,10 @@ function jsKalturaPlayerTest( videoId ){
 	});
 
 	// test the iframe api with prototype selector
-	test("KDP api valid with prototype and jQuery", function(){
+	asyncTest("KDP api valid with prototype and jQuery", function(){
 		equal( $( 'kaltura_player' ).evaluate('{mediaProxy.entry.id}'), '0_uka1msg4', "prototype .evaluate() call");
 		equal( jQuery( '#kaltura_player' ).get(0).evaluate('{mediaProxy.entry.id}'), '0_uka1msg4', 'jQuery evaluate() call');
+		start();
 	});
 
 }
