fixed google analytics test ( merge conflict with org callback in r2262 )
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2269 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/KdpApiGoogleAnalytics.qunit.html
+++ b/modules/KalturaSupport/tests/KdpApiGoogleAnalytics.qunit.html
@@ -90,7 +90,7 @@ function jsKalturaPlayerTest( videoId ){
 	var kdp = $j( '#kaltura_player' ).get(0);
 	var $iframe = $('#' + videoId + '_ifp').contents();
 	var iframeContext = window.frames['kaltura_player_ifp'];
-
+	start();
 	asyncTest("mediaReady event sent", function(){
 		$j( testEventObject ).bind('mediaReady', function(event, testEvent ){
 			equal( testEvent.action, "mediaReady", "action mediaReady sent" );
