--- a/modules/KalturaSupport/tests/CuePoints.qunit.html
+++ b/modules/KalturaSupport/tests/CuePoints.qunit.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Cue Points example html5 / kdp</title>
+<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript">
@@ -17,39 +18,73 @@
 
 	// Bind to cuePointReached event
 	var jsCallbackReady = function( playerId ) {
-		myPlayer = $('#' + playerId ).get(0);
+		myPlayer = $j('#' + playerId ).get(0);
 
 		myPlayer.addJsListener("cuePointReached", "writeLog");
 		myPlayer.addJsListener("adOpportunity", "writeLog");
 	};
 
 	var writeLog = function( qPoint ) {
+		trackEventForTests( qPoint );
 		var type = (qPoint.context) ? 'Ad' : 'Code';
-		$('#eventRowDesc').after(
-			$('<tr />' ).append(
-				$('<td />').text( qPoint.cuePoint.name ),
-				$('<td />').text( type ),
-				$('<td />').text( qPoint.cuePoint.startTime )
+		$j('#eventRowDesc').after(
+			$j('<tr />' ).append(
+				$j('<td />').text( qPoint.cuePoint.name ),
+				$j('<td />').text( type ),
+				$j('<td />').text( qPoint.cuePoint.startTime )
 			)
 		);
 	};
+</script>
+<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
+<script type="text/javascript">	
+var testEventObject = {};
+//we use this round about way of tracking events to show the events are being sent for google.
+function trackEventForTests( qPoint ) {
+	if(  qPoint.context == "pre" ){
+		$j( testEventObject ).trigger( 'preCueEvent', qPoint );
+	}
+	if( !qPoint.context ){
+		$j( testEventObject ).trigger( 'cueEvent', qPoint );
+	}
+}
+function jsKalturaPlayerTest( videoId ){
+	// Name this module
+	module( "CuePoints" );
+
+	var kdp = $j( '#kaltura_player' ).get(0);
+	
+	asyncTest("start cue point", function(){
+		kalturaQunitWaitForPlayer(function(){
+			$j( testEventObject ).bind('preCueEvent', function(event, qPoint){
+				var type = (qPoint.context) ? 'Ad' : 'Code';
+				equal( qPoint.cuePoint.name, "Preroll", "Preroll event sent" );
+				equal( qPoint.context, "pre", "Preroll Ad cue event sent" );
+				// continue testing
+				start();
+			});
+			kdp.sendNotification('doPlay');
+		});
+	});
+	asyncTest("CuePoint 1 at 3 seconds", function(){
+		$j( testEventObject ).bind('cueEvent', function( event, qPoint ){
+			equal( qPoint.cuePoint.name, "cuePoint 1", "CuePoint 1 event text sent");  
+			equal( qPoint.cuePoint.startTime, 3000, "CuePoint 1 Ad cue event sent" );
+			// Finish tests:
+			kdp.sendNotification('doPause');
+			start();
+		});		
+	});
+
+}
 </script>
 </head>
 <body>
 <h2> Cue Points for kdp flash player and html5 player </h2>
 <a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
 <br /><br />
-<div style="position:absolute;top:90px;left:450px;width:500px;height:300px;" >
-<i>Cue Points events: </i><br />
-<table border="1" width="500">
-<tr id="eventRowDesc">
-	<td>Name</td>
-	<td>Type</td>
-	<td>Start Time</td>
-</tr>
-</table>
-</div>
 
+<div style="float:left">
 <object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="333" width="400" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1309856559/wid/_423851/uiconf_id/5069622/entry_id/1_sqv8eppy" data="http://www.kaltura.com/index.php/kwidget/cache_st/1309856559/wid/_423851/uiconf_id/5069622/entry_id/1_sqv8eppy">
 	<param name="allowFullScreen" value="true" />
 	<param name="allowNetworking" value="all" />
@@ -68,6 +103,17 @@
 	<span property="media:height" content="333"></span>
 	<span property="media:type" content="application/x-shockwave-flash"></span>
 </object>
+</div>
+<div style="float:left;padding-left:20px" >
+	<i>Cue Points events: </i><br />
+	<table border="1" width="520">
+	<tr id="eventRowDesc">
+		<td>Name</td>
+		<td>Type</td>
+		<td>Start Time</td>
+	</tr>
+	</table>
+</div>
 
 </body>
 </html>
