--- a/modules/KalturaSupport/tests/kdpApiPlayFromTo.html
+++ b/modules/KalturaSupport/tests/kdpApiPlayFromTo.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>Kdp Api Play From/To attributes</title>
 		<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 		<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
