Added binding for 'adOpportunity' in mw.KAds.js Added preroll from uiConf to CuePoints.qunit.html test file
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2289 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/CuePoints.qunit.html
+++ b/modules/KalturaSupport/tests/CuePoints.qunit.html
@@ -107,28 +107,12 @@ function jsKalturaPlayerTest( videoId ){
 </head>
 <body>
 <h2> Cue Points for kdp flash player and html5 player </h2>
+<h4> Preroll from uiConf, other ads from cue points</h4>
 <a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
 <br /><br />
 
 <div style="float:left">
-<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="333" width="400" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1309856559/wid/_423851/uiconf_id/5069622/entry_id/1_sqv8eppy" data="http://www.kaltura.com/index.php/kwidget/cache_st/1309856559/wid/_423851/uiconf_id/5069622/entry_id/1_sqv8eppy">
-	<param name="allowFullScreen" value="true" />
-	<param name="allowNetworking" value="all" />
-	<param name="allowScriptAccess" value="always" />
-	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="&externalInterfaceDisabled=false" />
-	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1309856559/wid/_423851/uiconf_id/5069622/entry_id/1_sqv8eppy" />
-	<a href="http://corp.kaltura.com">video platform</a>
-	<a href="http://corp.kaltura.com/video_platform/video_management">video management</a>
-	<a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a>
-	<a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a>
-	<a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/423851/sp/42385100/thumbnail/entry_id/1_sqv8eppy/width/120/height/90/bgcolor/000000/type/2"></a>
-	<span property="dc:description" content=""></span>
-	<span property="media:title" content="Charlie bit my finger"></span>
-	<span property="media:width" content="400"></span>
-	<span property="media:height" content="333"></span>
-	<span property="media:type" content="application/x-shockwave-flash"></span>
-</object>
+<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" bgcolor="#000000" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1310313522/wid/_423851/uiconf_id/5143401/entry_id/1_sqv8eppy" data="http://www.kaltura.com/index.php/kwidget/cache_st/1310313522/wid/_423851/uiconf_id/5143401/entry_id/1_sqv8eppy"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&externalInterfaceDisabled=false" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1310313522/wid/_423851/uiconf_id/5143401/entry_id/1_sqv8eppy" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a> <a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/423851/sp/42385100/thumbnail/entry_id/1_sqv8eppy/width/120/height/90/bgcolor/000000/type/2"></a> <span property="dc:description" content=""></span><span property="media:title" content="Charlie bit my finger"></span> <span property="media:width" content="400"></span><span property="media:height" content="330"></span> <span property="media:type" content="application/x-shockwave-flash"></span> </object>
 </div>
 <div style="float:left;padding-left:20px" >
 	<i>Cue Points events: </i><br />
