--- a/modules/TimedText/tests/InlineSrtTimedText.qunit.html
+++ b/modules/TimedText/tests/InlineSrtTimedText.qunit.html
@@ -3,50 +3,20 @@
 <html>
 <head>
 	<title>sample mv embed</title>
- 	<!--  <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script> -->
- 	<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>
+ 	<script type="text/javascript" src="../../mwEmbedLoader.php"></script>
  	<script type="text/javascript">
- 	$j( document ).ready(function(){
-		$j('#inlineTracksTextArea').text(
-			$j.trim( $j('#inlineTracks').html() )
-		);
-		$j('#apiExampleTextArea').text(
-		 	$j.trim( $j('#apiExample').html() )
-		)
- 	});
-
  	</script>
 </head>
 <body>
-<h3> mwEmbed Timed Text Examples:</h3>
-Click on the little lower right "CC" icon to expose the timed text
- <table border="1" cellpadding="6" width="950">
-
- 	<tr>
- 	<td id="apiExample" valign="top" width="410">
-	 	<video
-	 		style="width:512px;height:288px"
-	 		durationHint="7:52"
-	 		apititlekey="Yochai_Benkler_-_On_Autonomy,_Control_and_Cultural_Experience.ogg"
-	 		apiProvider="commons"
-	 		class="kskin"></video>
- 	<td valign="top">
- 			Commons Video API based timedText discovery<br>
-
- 	<textarea id="apiExampleTextArea" style="width:600px;height:180px"></textarea>
-	</td>
- 	</tr>
-
-<!--  -->
- 	<tr>
- 		<td id="inlineTracks" valign="top" width="410">
+<h3> Inline SRT Sources </h3>
 
  <video style="width:544px;height:304px;"
  		poster="http://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Elephants_Dream.ogg/seek%3D13-Elephants_Dream.ogg.jpg"
  		duration="10:53"
  		linkback="http://www.elephantsdream.org/" >
-	<source type="video/ogg" src="http://upload.wikimedia.org/wikipedia/commons/b/bd/Elephants_Dream.ogg" ></source>
-	<source type="video/h264" src="http://www.archive.org/download/ElephantsDream/ed_1024_512kb.mp4"></source>
+ 		
+<source type="video/ogg" src="http://upload.wikimedia.org/wikipedia/commons/b/bd/Elephants_Dream.ogg" ></source>
+<source type="video/h264" src="http://www.archive.org/download/ElephantsDream/ed_1024_512kb.mp4"></source>
 
 
 	<!--  Subtitles -->
@@ -163,20 +133,7 @@ Click on the little lower right "CC" icon to expose the timed text
 
 	</video>
 
-		</td>
-
- 		<td valign="top">
- 			<h4>Text track inline embed example</h4>
- 			see: <a href="http://www.whatwg.org/specs/web-apps/current-work/multipage/video.html#the-track-element">HTML5 timed text spec</a>
- 			<br><textarea id="inlineTracksTextArea" style="width:600px;height:180px">
-
- 	</textarea>
- 				</td>
- 	</tr>
-
-
- </table>
-
+	
 </body>
 </html>
 
