--- a/modules/TimedText/tests/InlineSrtTimedText.qunit.html
+++ b/modules/TimedText/tests/InlineSrtTimedText.qunit.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<title>sample mv embed</title>
- 	<script type="text/javascript" src="../../mwEmbedLoader.php"></script>
+ 	<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
  	<script type="text/javascript">
  	</script>
 </head>
