--- a/modules/TimedText/tests/InlineSrt.qunit.html
+++ b/modules/TimedText/tests/InlineSrt.qunit.html
@@ -2,15 +2,44 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-	<title>sample mv embed</title>
- 	<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+	<title>Inline SRT Sources</title>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+	<script type="text/javascript" src="jquery.cookie.js"></script>
+	<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
+	<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
  	<script type="text/javascript">
+ 	if( window['QUnit'] ){
+ 		// Clear the cookie for the test
+ 		$.cookie( 'TimedText.Preferences', false );
+ 		
+ 		QUnit.start();
+ 		// Name this module
+ 		module( "TimedText SRT" );
+ 		
+ 		asyncTest( "Subtitles displayed", function(){
+
+ 			mw.ready(function(){
+ 				var vid = $('#subtitlePlayer').get(0);
+ 				QUnit.ok(true, "Player Loaded");
+
+ 				$( vid ).bind("seeked", function(){
+ 					equal( $('.track span').text(), "At the left we can see...", "Subtitle displayed at seek time 16" );
+ 					start();
+ 				});
+ 				vid.play();
+ 				setTimeout(function(){
+ 					vid.pause();
+ 					vid.currentTime = 16;
+ 				}, 1000);
+	 		});
+ 		});
+ 	}
  	</script>
 </head>
 <body>
 <h3> Inline SRT Sources </h3>
 
- <video style="width:544px;height:304px;"
+ <video id="subtitlePlayer" style="width:544px;height:304px;"
  		poster="http://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Elephants_Dream.ogg/seek%3D13-Elephants_Dream.ogg.jpg"
  		duration="10:53"
  		linkback="http://www.elephantsdream.org/" >
