--- a/modules/KalturaSupport/tests/CuePoints.qunit.html
+++ b/modules/KalturaSupport/tests/CuePoints.qunit.html
@@ -7,49 +7,93 @@
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
 <script type="text/javascript">
 	var myPlayer;
-	// Load Temp Cue Points
-	mw.setConfig( 'Kaltura.TempCuePoints', [
-			{ startTime: 0, type: 2, name: 'Preroll' },
-			{ startTime: 3000, type: 1, name: 'cuePoint 1' },
-			{
-				startTime: 6000,
-				type: 2, // 1: CodeCuePoint, 2: AdCuePoint
-				providerType: 1, // 1: VAST, 2: FREEWHEEL
-				adType: 2, // 1: MIDROLL, 2: OVERLAY
-				name: 'Overlay',
-				sourceUrl: 'http://kaldev.kaltura.com/myopenx/www/delivery/fc.php?script=bannerTypeHtml:vastInlineBannerTypeHtml:vastInlineHtml&source=&format=vast&charset=UTF_8&nz=1&zones=z1=19',
-				endTime: 10000
-			},
-			{ startTime: 9000, type: 1, name: 'cuePoint 2' },
-			{ startTime: 56000, type: 2, name: 'Postroll' }
-		] );
+	/* Load Temp Cue Points
+	** Basic example from server */
+	mw.setConfig( 'Kaltura.TempCuePoints', { "objects" : [
+		{ "adType" : 1,
+        "createdAt" : 1310457850,
+        "cuePointType" : "adCuePoint.Ad",
+        "duration" : 0,
+        "endTime" : 0,
+        "entryId" : "0_qbtp2ceb",
+        "forceStop" : true,
+        "id" : "0_oxx941wi",
+        "partnerData" : null,
+        "partnerId" : 495794,
+        "partnerSortValue" : null,
+        "providerType" : 1,
+        "sourceUrl" : "http://d1.openx.org/fc.php?script=bannerTypeHtml:vastInlineBannerTypeHtml:vastInlineHtml&source=&format=vast&charset=UTF_8&nz=1&zones=z1=182104",
+        "startTime" : 0,
+        "status" : 1,
+        "systemName" : null,
+        "tags" : null,
+        "thumbOffset" : null,
+        "title" : "Preroll",
+        "updatedAt" : 1310457850,
+        "userId" : "ran@mailinator.com"
+      },
+      { "code" : "SOME CODE",
+        "createdAt" : 1310457621,
+        "cuePointType" : "codeCuePoint.Code",
+        "description" : "Code Cue Point",
+        "entryId" : "0_qbtp2ceb",
+        "forceStop" : null,
+        "id" : "0_1kszo2z6",
+        "partnerData" : null,
+        "partnerId" : 495794,
+        "partnerSortValue" : null,
+        "startTime" : 3000,
+        "status" : 1,
+        "systemName" : null,
+        "tags" : null,
+        "thumbOffset" : null,
+        "updatedAt" : 1310457621,
+        "userId" : "ran@mailinator.com"
+      },
+      { "adType" : 2,
+        "createdAt" : 1310457025,
+        "cuePointType" : "adCuePoint.Ad",
+        "duration" : 7000,
+        "endTime" : 13000,
+        "entryId" : "0_qbtp2ceb",
+        "forceStop" : null,
+        "id" : "0_0nmqtoor",
+        "partnerData" : null,
+        "partnerId" : 495794,
+        "partnerSortValue" : null,
+        "providerType" : 1,
+        "sourceUrl" : "http://kaldev.kaltura.com/myopenx/www/delivery/fc.php?script=bannerTypeHtml:vastInlineBannerTypeHtml:vastInlineHtml&source=&format=vast&charset=UTF_8&nz=1&zones=z1=19",
+        "startTime" : 6000,
+        "status" : 1,
+        "systemName" : null,
+        "tags" : "vast",
+        "thumbOffset" : null,
+        "title" : "My Overlay",
+        "updatedAt" : 1310457025,
+        "userId" : "ran@mailinator.com"
+      },
+      { "code" : "SOME CODE",
+        "createdAt" : 1310457894,
+        "cuePointType" : "codeCuePoint.Code",
+        "description" : "Code Cue Point 2",
+        "entryId" : "0_qbtp2ceb",
+        "forceStop" : null,
+        "id" : "0_sud78fly",
+        "partnerData" : null,
+        "partnerId" : 495794,
+        "partnerSortValue" : null,
+        "startTime" : 20000,
+        "status" : 1,
+        "systemName" : null,
+        "tags" : null,
+        "thumbOffset" : null,
+        "updatedAt" : 1310457894,
+        "userId" : "ran@mailinator.com"
+      }
+    ],
+	"totalCount" : 4
+	});
 	
-	/* Basic example from server
-	mw.setConfig( 'Kaltura.TempCuePoints', [
-		{
-			"providerType":0,
-			"sourceUrl":"http://kaldev.kaltura.com/myopenx/www/delivery/fc.php?script=bannerTypeHtml:vastInlineBannerTypeHtml:vastInlineHtml&source=&format=vast&charset=UTF_8&nz=1&zones=z1=19",
-			"adType":null,
-			"title":"Overlay",
-			"endTime":5000,
-			"id":"0_0ks12n00",
-			"type":"adCuePoint.Ad",
-			"status":1,
-			"entryId":"0_qbtp2ceb",
-			"partnerId":495794,
-			"createdAt":1310048326,
-			"updatedAt":1310048326,
-			"tags":"vast",
-			"startTime":5000,
-			"userId":"ran@mailinator.com",
-			"partnerData":null,
-			"partnerSortValue":null,
-			"forceStop":false,
-			"thumbOffset":null,
-			"systemName":null
-		}
-	]);
-	*/
 	// Bind to cuePointReached event
 	var jsCallbackReady = function( playerId ) {
 		myPlayer = $j('#' + playerId ).get(0);
@@ -63,7 +107,7 @@
 		var type = (qPoint.context) ? 'Ad' : 'Code';
 		$j('#eventRowDesc').after(
 			$j('<tr />' ).append(
-				$j('<td />').text( qPoint.cuePoint.name ),
+				$j('<td />').text( (qPoint.cuePoint.title) ? qPoint.cuePoint.title : qPoint.cuePoint.description ),
 				$j('<td />').text( type ),
 				$j('<td />').text( qPoint.cuePoint.startTime )
 			)
@@ -86,13 +130,13 @@ function jsKalturaPlayerTest( videoId ){
 	// Name this module
 	module( "CuePoints" );
 
-	var kdp = $j( '#kaltura_player' ).get(0);
+	var kdp = $j( '#' + videoId ).get(0);
 	
 	asyncTest("start cue point", function(){
 		kalturaQunitWaitForPlayer(function(){
 			$j( testEventObject ).bind('preCueEvent', function(event, qPoint){
 				var type = (qPoint.context) ? 'Ad' : 'Code';
-				equal( qPoint.cuePoint.name, "Preroll", "Preroll event sent" );
+				equal( qPoint.cuePoint.title, "Preroll", "Preroll event sent" );
 				equal( qPoint.context, "pre", "Preroll Ad cue event sent" );
 				// continue testing
 				start();
@@ -102,8 +146,8 @@ function jsKalturaPlayerTest( videoId ){
 	});
 	asyncTest("CuePoint 1 at 3 seconds", function(){
 		$j( testEventObject ).bind('cueEvent', function( event, qPoint ){
-			equal( qPoint.cuePoint.name, "cuePoint 1", "CuePoint 1 event text sent");  
-			equal( qPoint.cuePoint.startTime, 3000, "CuePoint 1 Ad cue event sent" );
+			equal( qPoint.cuePoint.description, "Code Cue Point", "Code Cue Point event text sent");
+			equal( qPoint.cuePoint.startTime, 3000, "Code Cue Point event sent" );
 			// Finish tests:
 			kdp.sendNotification('doPause');
 			start();
