--- a/modules/TimedText/tests/InlineSrt.qunit.html
+++ b/modules/TimedText/tests/InlineSrt.qunit.html
@@ -41,7 +41,7 @@
 
  <video id="subtitlePlayer" style="width:544px;height:304px;"
  		poster="http://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Elephants_Dream.ogg/seek%3D13-Elephants_Dream.ogg.jpg"
- 		duration="10:53"
+ 		durationHint="10:53"
  		linkback="http://www.elephantsdream.org/" >
  		
 <source type="video/ogg" src="http://upload.wikimedia.org/wikipedia/commons/b/bd/Elephants_Dream.ogg" ></source>
