switched "play" binding to "onPlay" .. having both the binding and the main method "play" using the same name was causing strange hard to trace issues. We will just have to have people use 'onplay' binding instead of 'play'
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2310 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/Html5IframeApiTest.html
+++ b/modules/KalturaSupport/tests/Html5IframeApiTest.html
@@ -92,7 +92,7 @@
 				$j( '#vid').get(0).currentTime = 10;
 			});
 
-			$j('#vid').bind('play', function(){
+			$j('#vid').bind('onplay', function(){
 				$j('#playPauseLog').append( "Play Event\n" );
 			});
 			
