--- a/modules/TimedText/tests/InlineTTML.qunit.html
+++ b/modules/TimedText/tests/InlineTTML.qunit.html
@@ -7,13 +7,38 @@
 	<script type="text/javascript" src="jquery.cookie.js"></script>
 	<script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 	<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
- 	<script type="text/javascript">
+</head>
+<body>
+<h3> Inline TMML Sources </h3>
+
+ <video id="subtitlePlayer" style="width:544px;height:304px;"  
+ 		poster="http://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Elephants_Dream.ogg/seek%3D13-Elephants_Dream.ogg.jpg"
+ 		durationHint="10:53"
+ 		linkback="http://www.elephantsdream.org/" >
+ 		
+<source type="video/ogg" src="http://upload.wikimedia.org/wikipedia/commons/b/bd/Elephants_Dream.ogg" ></source>
+<source type="video/h264" src="http://www.archive.org/download/ElephantsDream/ed_1024_512kb.mp4"></source>
+
+	<!--  Subtitles -->
+      <track kind="subtitles" id="video_af" srclang="af"
+             src="media/elephants_dream/elephans_dream.en.ttml.xml"></track>
+
+	</video>
+
+	<script type="text/javascript">
 	// TMML is not friendly to dynamic playhead positions ( assumes static play control bar ) 
 	mw.setConfig( 'EmbedPlayer.OverlayControls', false );
+	// Show controls for timed text on ipad
+	mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
  	
  	if( window['QUnit'] ){
  		// Clear the cookie for the test
  		$.cookie( 'TimedText.Preferences', false );
+
+		// if running a test give iOS persistant native player
+		if( kIsIOS() ){
+			$('#subtitlePlayer').addClass( "persistentNativePlayer" );
+		}
  		
  		QUnit.start();
  		// Name this module
@@ -38,25 +63,6 @@
  		});
  	}
  	</script>
-</head>
-<body>
-<h3> Inline TMML Sources </h3>
-
- <video id="subtitlePlayer" style="width:544px;height:304px;"
- 		poster="http://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Elephants_Dream.ogg/seek%3D13-Elephants_Dream.ogg.jpg"
- 		durationHint="10:53"
- 		linkback="http://www.elephantsdream.org/" >
- 		
-<source type="video/ogg" src="http://upload.wikimedia.org/wikipedia/commons/b/bd/Elephants_Dream.ogg" ></source>
-<source type="video/h264" src="http://www.archive.org/download/ElephantsDream/ed_1024_512kb.mp4"></source>
-
-	<!--  Subtitles -->
-      <track kind="subtitles" id="video_af" srclang="af"
-             src="media/elephants_dream/elephans_dream.en.ttml.xml"></track>
-
-	</video>
-
-	
 </body>
 </html>
 
