* Added test for mix entry * Updated the server result for cue points
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2317 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/CuePoints.qunit.html
+++ b/modules/KalturaSupport/tests/CuePoints.qunit.html
@@ -21,7 +21,7 @@
         "partnerData" : null,
         "partnerId" : 495794,
         "partnerSortValue" : null,
-        "providerType" : 1,
+        "protocolType" : 1,
         "sourceUrl" : "http://d1.openx.org/fc.php?script=bannerTypeHtml:vastInlineBannerTypeHtml:vastInlineHtml&source=&format=vast&charset=UTF_8&nz=1&zones=z1=182104",
         "startTime" : 0,
         "status" : 1,
@@ -61,7 +61,7 @@
         "partnerData" : null,
         "partnerId" : 495794,
         "partnerSortValue" : null,
-        "providerType" : 1,
+        "protocolType" : 1,
         "sourceUrl" : "http://kaldev.kaltura.com/myopenx/www/delivery/fc.php?script=bannerTypeHtml:vastInlineBannerTypeHtml:vastInlineHtml&source=&format=vast&charset=UTF_8&nz=1&zones=z1=19",
         "startTime" : 6000,
         "status" : 1,
