--- a/modules/KalturaSupport/tests/CuePoints.qunit.html
+++ b/modules/KalturaSupport/tests/CuePoints.qunit.html
@@ -10,29 +10,7 @@
 	/* Load Temp Cue Points
 	** Basic example from server */
 	mw.setConfig( 'Kaltura.TempCuePoints', { "objects" : [
-		{ "adType" : 1,
-        "createdAt" : 1310457850,
-        "cuePointType" : "adCuePoint.Ad",
-        "duration" : 0,
-        "endTime" : 0,
-        "entryId" : "0_qbtp2ceb",
-        "forceStop" : true,
-        "id" : "0_oxx941wi",
-        "partnerData" : null,
-        "partnerId" : 495794,
-        "partnerSortValue" : null,
-        "protocolType" : 1,
-        "sourceUrl" : "http://d1.openx.org/fc.php?script=bannerTypeHtml:vastInlineBannerTypeHtml:vastInlineHtml&source=&format=vast&charset=UTF_8&nz=1&zones=z1=182104",
-        "startTime" : 0,
-        "status" : 1,
-        "systemName" : null,
-        "tags" : null,
-        "thumbOffset" : null,
-        "title" : "Preroll",
-        "updatedAt" : 1310457850,
-        "userId" : "ran@mailinator.com"
-      },
-      { "code" : "SOME CODE",
+		{ "code" : "SOME CODE",
         "createdAt" : 1310457621,
         "cuePointType" : "codeCuePoint.Code",
         "description" : "Code Cue Point",
@@ -49,8 +27,8 @@
         "thumbOffset" : null,
         "updatedAt" : 1310457621,
         "userId" : "ran@mailinator.com"
-      },
-      { "adType" : 2,
+		},
+		{ "adType" : 2,
         "createdAt" : 1310457025,
         "cuePointType" : "adCuePoint.Ad",
         "duration" : 7000,
@@ -71,8 +49,8 @@
         "title" : "My Overlay",
         "updatedAt" : 1310457025,
         "userId" : "ran@mailinator.com"
-      },
-      { "code" : "SOME CODE",
+		},
+		{ "code" : "SOME CODE",
         "createdAt" : 1310457894,
         "cuePointType" : "codeCuePoint.Code",
         "description" : "Code Cue Point 2",
@@ -89,7 +67,29 @@
         "thumbOffset" : null,
         "updatedAt" : 1310457894,
         "userId" : "ran@mailinator.com"
-      }
+		},
+		{ "adType" : 1,
+        "createdAt" : 1310457850,
+        "cuePointType" : "adCuePoint.Ad",
+        "duration" : 0,
+        "endTime" : 0,
+        "entryId" : "0_qbtp2ceb",
+        "forceStop" : true,
+        "id" : "0_oxx941wi",
+        "partnerData" : null,
+        "partnerId" : 495794,
+        "partnerSortValue" : null,
+        "protocolType" : 1,
+        "sourceUrl" : "http://d1.openx.org/fc.php?script=bannerTypeHtml:vastInlineBannerTypeHtml:vastInlineHtml&source=&format=vast&charset=UTF_8&nz=1&zones=z1=182104",
+        "startTime" : 30000,
+        "status" : 1,
+        "systemName" : null,
+        "tags" : null,
+        "thumbOffset" : null,
+        "title" : "Midroll",
+        "updatedAt" : 1310457850,
+        "userId" : "ran@mailinator.com"
+		}
     ],
 	"totalCount" : 4
 	});
