working KMix entry change on "empty" player, renamed test into more descriptive KMixNoSourcesEntry * renamed kalturaGetResultObject to KalturaResultObject *  some minor code cleanup * added some delays to applyIntrinsic layout since some parts of the change size timeline is asynchronous  * refactored "missing sources" to just output an error and continue with valid player state  * cleaned up kaltura player bootstrap, was triggering iframe domain error too soon.  * added stubs for jsLoader inject test
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2334 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/BasicPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/BasicPlayer.qunit.html
@@ -3,8 +3,6 @@
 <title>Basic Player test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
-<!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php -->
-<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 <script type="text/javascript">	
 function jsKalturaPlayerTest( videoId ){
 	
@@ -37,6 +35,8 @@ function jsKalturaPlayerTest( videoId ){
 
 }
 </script>
+<!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
+<script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
 <h2> Basic Player test </h2>
