* Save flashvars to EmbedPlayer * Updated KApi to read flashvars data and load plugins data * Load cue points from api both for javascript & iframe embeds
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2340 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/CuePoints.qunit.html
+++ b/modules/KalturaSupport/tests/CuePoints.qunit.html
@@ -9,7 +9,7 @@
 	var myPlayer;
 	/* Load Temp Cue Points
 	** Basic example from server */
-	mw.setConfig( 'Kaltura.TempCuePoints', { "objects" : [
+	mw.setConfig( 'Kaltura.TempCuePoints', [
 		{ "code" : "SOME CODE",
         "createdAt" : 1310457621,
         "cuePointType" : "codeCuePoint.Code",
@@ -90,9 +90,7 @@
         "updatedAt" : 1310457850,
         "userId" : "ran@mailinator.com"
 		}
-    ],
-	"totalCount" : 4
-	});
+    ]);
 	
 	// Bind to cuePointReached event
 	var jsCallbackReady = function( playerId ) {
