Fixed the broken test
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2345 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/KMixNoSourcesEntry.qunit.html
+++ b/modules/KalturaSupport/tests/KMixNoSourcesEntry.qunit.html
@@ -24,7 +24,7 @@ function jsKalturaPlayerTest( videoId ){
 			start();
 		}
 		kdp.addJsListener("entryReady", "kalturaQunitEntryReady");
-		$('#cm').click();
+		$(".changeMedia").get(1).click();
 	});
 }
 </script>
