don't hide show video tag on iOS ( keep the hack in place for firefox )
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2358 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/KMixNoSourcesEntry.qunit.html
+++ b/modules/KalturaSupport/tests/KMixNoSourcesEntry.qunit.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>MIX test</title>
+<title>K MIX Entry with no sources</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
@@ -15,7 +15,7 @@ window['jsCallbackReady'] = function( videoId ){
 function jsKalturaPlayerTest( videoId ){
 	var kdp = document.getElementById( videoId );
 	// Name this module
-	module( "KMix No Sources Entry" );
+	module( "K MIX Entry with no sources" );
 		
 	asyncTest("Change Media 1_oz8y7d5a", function(){
 		window['kalturaQunitEntryReady'] = function( entry ){
