passing captions custom vars test fixed default text layout
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2378 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/CaptionsCustomVars.qunit.html
+++ b/modules/KalturaSupport/tests/CaptionsCustomVars.qunit.html
@@ -27,8 +27,8 @@ function jsKalturaPlayerTest( videoId ){
 
 					kdp.sendNotification( 'doSeek', 2);
 					setTimeout(function(){
-						ok( $iframe.find('.track_subtitles').length, "text container in DOM");
-						equal( $iframe.find('.track_subtitles span').text(), "Harold is the coffee alright?", "Text matches srt");
+						ok( $iframe.find('.captionsLayoutTarget').length, "Text container in DOM");
+						equal( $iframe.find('.track span').text(), "Harold is the coffee alright?", "Text matches srt");
 						start();
 					}, 500 );
 				},500);
