fixed descendant addJsListener function calls.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2397 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/KMixNoSourcesEntry.qunit.html
+++ b/modules/KalturaSupport/tests/KMixNoSourcesEntry.qunit.html
@@ -15,10 +15,11 @@ window['jsCallbackReady'] = function( videoId ){
 function jsKalturaPlayerTest( videoId ){
 	var kdp = document.getElementById( videoId );
 	// Name this module
-	module( "K MIX Entry with no sources" );
+	module( "Entry with no sources switch" );
 		
 	asyncTest("Change Media 1_oz8y7d5a", function(){
 		window['kalturaQunitEntryReady'] = function( entry ){
+			alert('wtf?');
 			// check for the inital entry ready:
 			if( entry.id == '1_2qy6yq5j' ){
 				equal(entry.id, "1_2qy6yq5j", "Mix entry ready" );
@@ -37,8 +38,6 @@ function jsKalturaPlayerTest( videoId ){
 		kdp.addJsListener("entryReady", "kalturaQunitEntryReady");
 	});
 }
-
-
 </script>
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
