--- a/modules/KalturaSupport/tests/JsLoaderInjectAfterDomReady.qunit.html
+++ b/modules/KalturaSupport/tests/JsLoaderInjectAfterDomReady.qunit.html
@@ -5,58 +5,51 @@
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php -->
 <script type="text/javascript">	
 if( window.QUnit ){	
-
 	// Name this module
 	module( "JS inject after dom ready" );
 	
-	$( document ).ready(function(){
-		// add and embed player:
-		$('body').append('<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" ' +
-				'allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" ' +
-					'xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" ' +
-					'resource="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4" ' +
-					'data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4"> ' +
-						'<param name="allowFullScreen" value="true" /> ' +
-						'<param name="allowNetworking" value="all" /> ' +
-						'<param name="allowScriptAccess" value="always" /> ' +
-						'<param name="bgcolor" value="#000000" /> ' +
-						'<param name="flashVars" value="&" /> ' +
-						'<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4" /> ' +
-					'</object>' );
-		
-		ok(true, "Added flash object  to dom");
-		
-		$('head').append('<script src="../../../mwEmbedLoader.php" type="text/javascript">' );
-		ok(true, "Added mwEmbedLoader to dom");
-		
-		test( "Iframe in DOM", function() {
-			ok( $('#' + videoId + '_ifp').length , 'iframe found' );
-			equal( typeof iframeContext, 'object', "iframe JavaScript context available" );
-		});
-			
-	});	
+	$( document ).ready( function(){
 
-	asyncTest("Iframe layout elements", function(){
-		kalturaQunitWaitForPlayer(function(){
-			ok( $iframe.find('.play-btn-large').length, ".play-btn-large found" );
-			ok( $iframe.find('.play-btn').length, ".play-btn found" );
-			start();
+		window.QUnit.start();
+		asyncTest( "Iframe in DOM", function() {
+			
+			ok(true, "Added flash object  to dom");
+			window['jsCallbackReady'] = function( videoId ){
+				ok(true, "jsCallbackReady callbacked issued");
+				start();
+			};
+			
+			//window.preMwEmbedConfig = {};
+			//window.preMwEmbedConfig[ 'forceMobileHTML5' ] = true;
+			$('head').append( '<script src="../../../mwEmbedLoader.php" type="text/javascript" />' );
+			
+			// add and embed player:
+			$('body').append('<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" ' +
+					'allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" ' +
+						'xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" ' +
+						'resource="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4" ' +
+						'data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4"> ' +
+							'<param name="allowFullScreen" value="true" /> ' +
+							'<param name="allowNetworking" value="all" /> ' +
+							'<param name="allowScriptAccess" value="always" /> ' +
+							'<param name="bgcolor" value="#000000" /> ' +
+							'<param name="flashVars" value="&" /> ' +
+							'<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4" /> ' +
+						'</object>' );
+
+			ok( true, "Added mwEmbedLoader to DOM");
+			kCheckAddScript();
+
 		});
-	});
+	});	
+		
+
 	
-	asyncTest("Iframe config", function(){
-		equal( iframeContext.mw.getConfig('Kaltura.IframeRewrite' ), false, "Kaltura.IframeRewrite" ); 
-		equal( iframeContext.mw.getConfig('Mw.LogPrepend'), 'iframe:', "Mw.LogPrepend ");
-		// Test page context config: 
-		equal( iframeContext.mw.getConfig('EmbedPlayer.EnableIpadHTMLControls'), true, 'EmbedPlayer.EnableIpadHTMLControls' );
-		start();
-	});
 }
 </script>
 </head>
 <body>
-<h2> Basic Player test </h2>
-<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
+<h2> Js Post Dom Ready inject </h2>
 <br />
 
 </body>
